fix footer buttons spacing and modified mobile view

--- a/main.css
+++ b/main.css
@@ -51,12 +51,13 @@ ul {
     outline: none;
     border: none;
     height: 50px;
-    padding: 0 30px;
+    /* padding: 0 30px; */
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.02em;
     font-family: var(--secondary-font);
     cursor: pointer;
+    width: 200px;
 }
 
 .btn-primary {
